working on populate data subs
